style.css
*{
    margin: 0;
    padding: 0;
    outline: none;
    border: none;
}

html, body{
    overflow-x: hidden;
    width: 100%;
    height: 100%;
}

section{
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.box{
    height: 20rem;
    width: 20rem;
    display: flex;
    flex-direction: column;
}

.heading1{
    text-align: center;
}

.formm{
    display: flex;
    flex-direction: column;
    row-gap: 1rem
}

input{
    border: 2px solid black;
    width: 18rem;
    height: 2rem;
}

.btn{
    background-color: grey;
    cursor: pointer;
}

.box p:nth-of-type(2){
    text-align: center;
}

